[package]
name = "sumo-campaign-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

# SOVD client for observing/driving
sovd-client = { git = "ssh://git@github.com/sdv-playground/SOVDd.git", branch = "main" }

# SUIT manifest parsing
sumo-onboard = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
sumo-crypto = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }
sumo-codec = { git = "ssh://git@github.com/tr-sdv-sandbox/sumo-rs.git", branch = "main" }

# Campaign orchestrator (drive mode)
sumo-sovd-orchestrator = { git = "ssh://git@github.com/sdv-playground/sumo-sovd.git", branch = "main" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

# Temporary: point sovd-* / sumo-sovd-orchestrator at local checkouts while
# iterating on the FlashState rename. Remove once SOVDd + sumo-sovd are
# committed + pushed.
[patch."ssh://git@github.com/sdv-playground/SOVDd.git"]
sovd-client = { path = "../../SOVDd/crates/sovd-client" }

[patch."ssh://git@github.com/sdv-playground/sumo-sovd.git"]
sumo-sovd-orchestrator = { path = "../../sumo-sovd/crates/orchestrator" }
